Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-67642

QtWebEngine 5.11 Web Inspector SEGV_MAPERR

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.11.0 Beta 4
    • 5.11
    • WebEngine
    • None

      After 3bc5b9d4 [1], launching the Web Inspector in the Falkon web-browser leads to signal 11 SEGV_MAPERR 000000000000.

      http://code.qt.io/cgit/qt/qtwebengine.git/commit/?id=3bc5b9d4f9d481707c02e83e0cd20f60dec425f2

      Thread 1 (Thread 0x7ffff7f99780 (LWP 25765)):
      #0  0x00007fffeede660b in QtWebEngineCore::DevToolsFrontendQt::DevToolsFrontendQt (this=0x5555598d2fb0, webContentsAdapter=..., 
          inspectedContents=0x555559a449d0)
          at qtwebengine-5.11.9999/src/core/devtools_frontend_qt.cpp:187
      #1  0x00007fffeede6bd6 in QtWebEngineCore::DevToolsFrontendQt::Show (frontendAdapter=..., inspectedContents=0x555559a449d0)
          at qtwebengine-5.11.9999/src/core/devtools_frontend_qt.cpp:162
      #2  0x00007fffeee2c82b in QtWebEngineCore::WebContentsAdapter::openDevToolsFrontend (this=<optimized out>, frontendAdapter=...)
          at qtwebengine-5.11.9999/src/core/web_contents_adapter.cpp:1180
      #3  0x00007ffff5f5b2a0 in QWebEnginePage::setDevToolsPage (this=this@entry=0x7fffd4005a50, 
          devToolsPage=devToolsPage@entry=0x55555995f7a0)
          at qtwebengine-5.11.9999/src/webenginewidgets/api/qwebenginepage.cpp:2081
      #4  0x00007ffff5f5b525 in QWebEnginePage::setInspectedPage (this=this@entry=0x55555995f7a0, page=0x7fffd4005a50)
          at qtwebengine-5.11.9999/src/webenginewidgets/api/qwebenginepage.cpp:2035
      #5  0x00007ffff7a94871 in WebInspector::setView (this=this@entry=0x7fffd400add0, view=<optimized out>)
          at falkon-9999/src/lib/webengine/webinspector.cpp:71
      #6  0x00007ffff7aab089 in WebTab::showWebInspector (this=0x5555599e8890, inspectElement=inspectElement@entry=true)
          at falkon-9999/src/lib/webtab/webtab.cpp:225
      #7  0x00007ffff7aaa287 in TabbedWebView::inspectElement (this=0x55555957b880)
          at falkon-9999/src/lib/webtab/tabbedwebview.cpp:73
      #8  0x00007ffff7ab77ba in TabbedWebView::qt_static_metacall (_o=0x55555957b880, _c=<optimized out>, _id=<optimized out>, 
          _a=<optimized out>) at src/lib/FalkonPrivate_autogen/2FW6LYN3XI/moc_tabbedwebview.cpp:122
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            allan.jensen Allan Sandfeld Jensen
            chiitoo chiitoo
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes