Fix crash on opening devtools in simplebrowser

The devtools webcontents-adapter is no longer guaranteed to be
initialized at this point, and we can initialize it directly with the
right site instance.

Task-number: QTBUG-67642
Change-Id: I8abbd4297ae677d3bd8d45f00f7463d60ee2bce5
Reviewed-by: Jüri Valdmann <juri.valdmann@qt.io>
Reviewed-by: Viktor Engelmann <viktor.engelmann@qt.io>